src/objects/RPL__c.object
<CustomObject>
    <fields>
        <fullName>Address_CN_1__c</fullName>
        <label>RPL Address1 (Chinese)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_CN_2__c</fullName>
        <label>RPL Address2 (Chinese)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_1__c</fullName>
        <label>RPL Address1 (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_EN_2__c</fullName>
        <label>RPL Address2 (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISOCountryCode__c</fullName>
        <label>ISOCountryCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Word1__c</fullName>
        <label>Key Word1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Word2__c</fullName>
        <label>Key Word2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Word3__c</fullName>
        <label>Key Word3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPL_CN__c</fullName>
        <description>RPL Chinese name.</description>
        <label>RPL (Chinese)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPL_City_CN__c</fullName>
        <label>RPL City (Chinese)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPL_City_EN__c</fullName>
        <label>RPL City (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPL_Denial_Type_Code__c</fullName>
        <label>RPL Denial Type Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPL_EN__c</fullName>
        <label>RPL (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RPL</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RPL_CN__c</columns>
        <columns>RPL_City_CN__c</columns>
        <columns>Key_Word1__c</columns>
        <columns>Key_Word2__c</columns>
        <columns>Key_Word3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RPL-{000000}</displayFormat>
        <label>RPLID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>